src/content/docs/sdk/unity/v5/features/preinstalled-ja.mdx
---
title: プリインストールアプリのアクティビティを送信する
description: プリインストールアプリから情報を送信するようにキャンペーンを設定します。
slug: ja/sdk/unity/features/preinstalled
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /ja/sdk/unity/v4/features/preinstalled
---

Adjust SDKを使用して、ユーザーのデバイスにプリインストールされているアプリでのアクティビティを記録することができます。これにより、キャンペーンからアプリをダウンロードしなかったユーザーの情報を記録することが可能です。

`AdjustConfig`インスタンスの`IsPreinstallTrackingEnabled`プロパティを`bool`値に設定することで、プリインストール計測を有効化するかどうかを制御します。

```cs
AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox, true);
//...
adjustConfig.IsPreinstallTrackingEnabled = true;
//...
Adjust.InitSdk(adjustConfig);
```

Adjust SDKは、プリインストールアプリを計測する5つのメソッドを提供しています：

-  [システムプロパティ](#system-properties)。
-  [コンテンツプロバイダー](#content-provider)。
-  [System Installer Receiver](#system-installer-receiver)。
-  [World Readable Directory（全ユーザーが読み取り可能なディレクトリ）](#world-readable-directory)。
-  [デフォルトのリンクトークン](#default-link-token)。

## System Properties {#system-properties}

Original Equipment Manufacturer（OEM）パートナーは、Androidのシステムプロパティを活用して、プリインストールされたアプリをアトリビューションすることができます。OEMはアトリビューション情報をファイルに書き出し、そのパスをシステムプロパティに追加します。Adjust SDKは初期化時にこのファイルを読み取り、そのインストールをアトリビュートします。

## Content Provider {#content-provider}

コンテンツプロバイダー（content provider）メソッドは、読み取り専用のコンテンツプロバイダーを使用します。SDKはコンテンツリゾルバー（content resolver）を使用して、リクエストからプリインストール情報を収集します。

パーミッションを設定するには、以下を`AndroidManifest.xml`ファイルに追加してください。

<CodeBlock title="AndroidManifest.xml">

```xml
<uses-permission android:name="com.adjust.preinstall.READ_PERMISSION"/>
```

</CodeBlock>

デバイスのプレインストール済みアプリにアクセスするには、以下を`AndroidManifest.xml`ファイルに追加してください。

<CodeBlock title="AndroidManifest.xml">

```xml
<queries>
   <intent>
       <action android:name="com.attribution.REFERRAL_PROVIDER"/>
   </intent>
</queries>

```

</CodeBlock>

## System Installer Receiver {#system-installer-receiver}

システム インストーラー メソッドは、ブロードキャストレシーバーを使用します。システムインストーラーはプリインストール情報をブロードキャストします。Adjust SDKは、システム プリインストール リファラー レシーバーを使用してこの情報を読み取ります。

レシーバーを設定するには、以下を`AndroidManifest.xml`ファイルに追加します。

<CodeBlock title="AndroidManifest.xml">

```xml
<receiver android:name="com.adjust.sdk.AdjustPreinstallReferrerReceiver">
   <intent-filter>
      <action android:name="com.attribution.SYSTEM_INSTALLER_REFERRER" />
   </intent-filter>
</receiver>

```

</CodeBlock>

## World\-readable directory {#world-readable-directory}

プリインストールされたアプリのアトリビューション情報を、世界で読み取り可能なディレクトリに保存します。SDKはインストール時にこのファイルから情報を読み取って、ユーザーをアトリビュートします。システムの暗号化プロトコルが、アプリデータを保護します。

プリインストール情報を見つけられるファイルパスを`AdjustConfig`インスタンスの`PreinstallFilePath`メソッドにパスし、Adjust SDKがその情報にアクセスできるようにしてください。

```cs
AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox, true);
//...
adjustConfig.PreinstallFilePath = "../EngagementFile.xml";
//...
Adjust.InitSdk(adjustConfig);
```

## デフォルトのリンクトークン {#default-link-token}

デフォルトのリンクトークンを設定すると、全てのプリインストールを定義済みのAdjustリンクにアトリビュートさせることができます。Adjustはアトリビューションソースが変更されるまで、このトークンに対して全ての情報を記録します。設定する方法は次のとおりです：

1. [Campaign Labで新しいリンクを作成します。](https://help.adjust.com/ja/article/links)

   ```http
   https://app.adjust.com/{token}
   ```

2. このトークンをコピーし、アプリデリゲートファイルの`AdjustConfig`インスタンスの`DefaultTracker`プロパティに割り当てます。

   ```cs
   AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox);
   //...
   adjustConfig.DefaultTracker = "{TrackerToken}";
   //...
   Adjust.InitSdk(adjustConfig);
   ```

3. アプリをビルドして実行します。ログを有効にしている場合は、ログにメッセージが表示されます。

   ```text
   Default tracker: 'abc123'.
   ```
